--- a/International-Partners.html
+++ b/International-Partners.html
@@ -186,7 +186,9 @@
         </nav>
     </section>
     <!-- nav-section-end -->
-
+ <!-- gotop-button-start -->
+ <a href="#" class="scrollup"> <i class="fa-solid fa-chevron-up" style="color: #f5f5f5;"></i></i></a>
+ <!-- gotop-button-end -->
     <!-- International Partners-section-start -->
     <section id="nav-International-Partners">
         <div class="container-fluid">
