--- a/activities.html
+++ b/activities.html
@@ -191,6 +191,9 @@
         </div>
     </section>
     <!-- activities-hero-section-end  -->
+     <!-- gotop-button-start -->
+  <a href="#" class="scrollup"> <i class="fa-solid fa-chevron-up" style="color: #f5f5f5;"></i></i></a>
+  <!-- gotop-button-end -->
     <!-- activities-section-start -->
     <section id="nav-activities">
         <div class="container">
