--- a/press release.html
+++ b/press release.html
@@ -183,6 +183,9 @@
         </nav>
     </section>
     <!-- nav-section-end -->
+     <!-- gotop-button-start -->
+  <a href="#" class="scrollup"> <i class="fa-solid fa-chevron-up" style="color: #f5f5f5;"></i></i></a>
+  <!-- gotop-button-end -->
     <!-- press-release-section-start -->
     <section id="nav-press-release">
         <div class="container-fluid">
