--- a/print-media.html
+++ b/print-media.html
@@ -193,7 +193,9 @@
     </section>
 
     <!-- print-media-hero-section-end  -->
-
+ <!-- gotop-button-start -->
+ <a href="#" class="scrollup"> <i class="fa-solid fa-chevron-up" style="color: #f5f5f5;"></i></i></a>
+ <!-- gotop-button-end -->
     <!-- print-media-section-start -->
     <section id="nav-print-media">
         <div class="container">
