--- a/photo gallery.html
+++ b/photo gallery.html
@@ -182,6 +182,9 @@
     </nav>
   </section>
   <!-- nav-section-end -->
+   <!-- gotop-button-start -->
+   <a href="#" class="scrollup"> <i class="fa-solid fa-chevron-up" style="color: #f5f5f5;"></i></i></a>
+   <!-- gotop-button-end -->
   <!-- photo-gallery-section-start -->
   <section id="photo-gallery">
     <div class="gallery">
